Gap issue46 (#51)
* Reorder & renamed sidebar sections #46

* Updated regional summary text and added legend description accordion #46

* Created network gap score description accordion #46

* Minor additions; Run Analysis --> Run, add legend title of Transit Gap Priority #46

* Text changes & transit layer toggle

* Municipality popups on hover #46

--- a/src/css/pages/map/sidebar.css
+++ b/src/css/pages/map/sidebar.css
@@ -130,13 +130,10 @@
 
 .gap__sidebar-contentButton div {
   display: none;
-  width: 95%;
   text-align: center;
   padding: 2%;
-  margin: auto;
-  background-color: #adc978;
-  border-radius: 20px
-
+  background-color: rgba(250, 228, 205, .5);
+  color: rgb(141, 115, 85);
 }
 .gap__sidebar-contentButton div.active{
   display: block;
